--- a/example/navigation.html
+++ b/example/navigation.html
@@ -20,24 +20,32 @@
 
 <body>
     <aside id="a">
-        <header data-title="aside"></header>
+        <header data-title="aside a"></header>
         <article></article>
     </aside>
 
-    <section id="zero" data-transition="slide" data-children="one" data-aside="a">
+    <aside id="b">
+        <header data-title="aside b"></header>
+        <article></article>
+    </aside>
+
+    <section id="zero" data-transition data-children="one" data-aside="a">
         <header data-title="Zero">
             <nav class="left">
                 <button data-icon="list" data-view-aside="a"></button>
             </nav>
             <nav class="right">
-                <button data-icon="arrow-right" data-view-section="two"></button>
+                <button data-icon="arrow-right" data-view-section="one"></button>
             </nav>
         </header>
         <article id="zero-1"></article>
     </section>
 
-    <section id="one" data-transition="slide" data-children="two" data-aside="a">
-        <header data-title="One">
+    <section id="one" data-transition="slide" data-children="two" data-aside="b">
+        <header data-title="One" data-back="home">
+            <nav class="left">
+                <button data-icon="list" data-view-aside="b"></button>
+            </nav>
             <nav class="right">
                 <button data-icon="arrow-right" data-view-section="two"></button>
             </nav>
@@ -78,6 +86,9 @@
             version: '2.2',
             history: false
         });
+
+        // Lungo.Notification.show("user", "Hello world! yeah");
+        // Lungo.Notification.show()
     </script>
 </body>
 </html>
