--- a/example/test.html
+++ b/example/test.html
@@ -53,23 +53,30 @@
             <ul>
                 <li class="thumb selectable arrow" data-view-section="folk" data-image="http://cdn.tapquo.com/photos/javi.jpg">
                     <a href="#" >
-                        <strong>Javi Jiménez</strong>
+                        <div class="right tag">@soyjavi</div>
+                        <strong class="text bold">Javi Jiménez</strong>
                         <small>Founder & CTO</small>
                     </a>
                 </li>
-                <li class="thumb" data-view-section="folk2" data-image="http://cdn.tapquo.com/photos/ina.jpg">
-                    <strong>Ignacio Olalde</strong>
-                    <small>... consectetur adipisicing elit.</small>
-                </li>
                 <li class="thumb" data-image="http://cdn.tapquo.com/photos/aitor.jpg">
-                    <strong>Aitor Jimenez</strong>
-                    <small>... consectetur adipisicing elit.</small>
+                    <div class="right tag bck success">@aitorjv</div>
+                    <strong class="text bold">Aitor Jimenez</strong>
+                    <small>Founder & Business Management</small>
                 </li>
-                <li class="thumb" data-image="http://cdn.tapquo.com/photos/manrique.jpg">
+                <li class="thumb" data-view-section="folk2" data-image="http://cdn.tapquo.com/photos/ina.jpg">
+                    <strong class="text bold">Ignacio Olalde</strong>
+                    <small>... consectetur adipisicing elit.</small>
+
+                <li class="thumb" data-image="http://cdn.tapquo.com/photos/josu.jpg">
                     <strong>Lorem ipsum dolor sit amet</strong>
                     <small>... consectetur adipisicing elit.</small>
                 </li>
-                <li class="thumb" data-image="http://cdn.tapquo.com/photos/josu.jpg">
+                <li class="thumb" data-view-section="folk2" data-image="http://cdn.tapquo.com/photos/mikel.jpg">
+                    <strong class="text bold">Mikel de Eulate</strong>
+                    <small>... consectetur adipisicing elit.</small>
+                </li>
+
+                <li class="thumb" data-image="http://cdn.tapquo.com/photos/manrique.jpg">
                     <strong>Lorem ipsum dolor sit amet</strong>
                     <small>... consectetur adipisicing elit.</small>
                 </li>
@@ -165,7 +172,6 @@
                     <a href="#">
                         <div class="tag right">11</div>
                         <strong>Folks</strong>
-                        <small>Discover our team!</small>
                     </a>
                 </li>
 
