Fade animation included and prevent routering if something is animating

--- a/example/navigation.html
+++ b/example/navigation.html
@@ -43,7 +43,7 @@
             <p>one one one one one one one one one one one one one one one one</p><p>one one one one one one one one one one one one one one one one</p><p>one one one one one one one one one one one one one one one one</p><p>one one one one one one one one one one one one one one one one</p><p>one one one one one one one one one one one one one one one one</p><p>one one one one one one one one one one one one one one one one</p><p>one one one one one one one one one one one one one one one one</p><p>one one one one one one one one one one one one one one one one</p><p>one one one one one one one one one one one one one one one one</p><p>one one one one one one one one one one one one one one one one</p><p>one one one one one one one one one one one one one one one one</p><p>one one one one one one one one one one one one one one one one</p><p>one one one one one one one one one one one one one one one one</p><p>one one one one one one one one one one one one one one one one</p><p>one one one one one one one one one one one one one one one one</p><p>END</p>
         </article>
     </section>
-    <section id="two" data-transition="slide" data-children="three">
+    <section id="two" data-transition="fade" data-children="three">
         <header data-back="home" data-title="Two">
             <nav class="right">
                 <button data-icon="arrow-right" data-view-section="three"></button>
@@ -51,7 +51,7 @@
         </header>
         <article id="two-1" class="list scroll">
             <ul>
-                <li>START</li>
+                <li>Fade</li>
                 <li>Lista</li>
                 <li>Lista</li>
                 <li>Lista</li>
