--- a/example/test.html
+++ b/example/test.html
@@ -46,7 +46,7 @@
 
         <nav data-control="groupbar" data-os="android" data-article="folks">
             <a href="#" data-view-article="folks" data-label="Folks" data-count="11"></a>
-            <a href="#" data-view-article="products" data-async="static/articles/products.html" data-label="Products" id="products"></a>
+            <a href="#" data-view-article="products" data-async="static/articles/products.html" data-label="Products" ></a>
         </nav>
 
         <article id="folks" class="active list scroll indente-d">
@@ -110,7 +110,7 @@
         <footer data-os="ios">
             <nav>
                 <a href="#" data-view-article="folks" data-icon="desktop" data-count="11"></a>
-                <a href="#" data-view-article="products" data-icon="tablet" data-count="5"></a>
+                <a href="#" data-view-article="products" data-async="static/articles/products.html" data-icon="tablet" data-count="5"></a>
             </nav>
         </footer>
     </section>
